# AppTemplate-OpenGL

./: .gitignore  Build.bat  BuildAndRun.bat  CMakeLists.txt  Clean.bat  GenerateBuildAndRun.bat  GenerateProjectFiles.bat  README.md
Source/: Main.cpp  OpenGL.mpp
